# contents-parser

./: .gitignore  README.md  pyproject.toml
contents_parser/: cli.py  parse.py
tests/: test_parse.py
