[project]
name = "contents_parser"
version = "0.0.1"
dependencies = [
    "asttokens==2.2.1",
    "autopep8==2.0.2",
    "backcall==0.2.0",
    "click==8.1.6",
    "comm==0.1.3",
    "debugpy==1.6.7",
    "decorator==5.1.1",
    "executing==1.2.0",
    "ipykernel==6.24.0",
    "ipython==8.14.0",
    "jedi==0.18.2",
    "jupyter_client==8.3.0",
    "jupyter_core==5.3.1",
    "matplotlib-inline==0.1.6",
    "nest-asyncio==1.5.6",
    "numpy==1.25.1",
    "packaging==23.1",
    "pandas==2.0.3",
    "parso==0.8.3",
    "pexpect==4.8.0",
    "pickleshare==0.7.5",
    "platformdirs==3.9.1",
    "prompt-toolkit==3.0.39",
    "psutil==5.9.5",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.2",
    "pycodestyle==2.10.0",
    "Pygments==2.15.1",
    "pytest==7.4.0",
    "python-dateutil==2.8.2",
    "pytz==2023.3",
    "pyzmq==25.1.0",
    "six==1.16.0",
    "stack-data==0.6.2",
    "tomli==2.0.1",
    "tornado==6.3.2",
    "traitlets==5.9.0",
    "tzdata==2023.3",
    "wcwidth==0.2.6",
]

[tool.setuptools.packages.find]
include = ["contents_parser*"]

[project.scripts]
contents-parser = "contents_parser.cli:get_top_deb_packages_for_arch"
